--- a/pcgf/smiliecreator/config/services.yml
+++ b/pcgf/smiliecreator/config/services.yml
@@ -2,16 +2,16 @@ services:
     pcgf.smiliecreator.listener:
         class: pcgf\smiliecreator\event\listener
         arguments:
-            - @user
-            - @template
-            - @controller.helper
+            - '@user'
+            - '@template'
+            - '@controller.helper'
         tags:
             - { name: event.listener }
     pcgf.smiliecreator.controller:
         class: pcgf\smiliecreator\controller\controller
         arguments:
-            - @request
-            - @user
-            - @template
-            - @controller.helper
-            - %core.root_path%
+            - '@request'
+            - '@user'
+            - '@template'
+            - '@controller.helper'
+            - '%core.root_path%'
