Some code adjustments

--- a/pcgf/smiliecreator/config/routing.yml
+++ b/pcgf/smiliecreator/config/routing.yml
@@ -1,6 +1,6 @@
 pcgf_smiliecreator_get_creator:
     path: /pcgf/smiliecreator
-    defaults: { _controller: pcgf.smiliecreator.controller:getSmilieCreator }
+    defaults: { _controller: pcgf.smiliecreator.controller:get_smilie_creator }
 pcgf_smiliecreator_get_shield:
     path: /pcgf/getsmilieshield
-    defaults: { _controller: pcgf.smiliecreator.controller:getShield }
+    defaults: { _controller: pcgf.smiliecreator.controller:get_shield }
